[package]
name = "wgpu-samples"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
futures = "0.3.28"
glam = "0.24.0"
image = { version = "0.24.6", default-features = false, features = [
    "jpeg",
    "png",
] }
wgpu = "0.16.0"
winit = "0.28.6"

[[bin]]
name = "hello-triangle"
path = "samples/hello-triangle/main.rs"

[[bin]]
name = "hello-rectangle"
path = "samples/hello-rectangle/main.rs"

[[bin]]
name = "shaders"
path = "samples/shaders/main.rs"

[[bin]]
name = "shaders-uniform"
path = "samples/shaders-uniform/main.rs"

[[bin]]
name = "textures"
path = "samples/textures/main.rs"

[[bin]]
name = "textures-mixed"
path = "samples/textures-mixed/main.rs"

[[bin]]
name = "transformations"
path = "samples/transformations/main.rs"

[[bin]]
name = "coordinate-systems"
path = "samples/coordinate-systems/main.rs"

[[bin]]
name = "more-cubes"
path = "samples/more-cubes/main.rs"

[[bin]]
name = "camera"
path = "samples/camera/main.rs"

[[bin]]
name = "colors"
path = "samples/colors/main.rs"

[[bin]]
name = "basic-lighting"
path = "samples/basic-lighting/main.rs"

[[bin]]
name = "materials"
path = "samples/materials/main.rs"

[[bin]]
name = "lighting-maps"
path = "samples/lighting-maps/main.rs"
